<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".servicios">


    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:text="@string/CHEV"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonMante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/man" />

    <Button
        android:id="@+id/button5Reservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res" />

    <Button
        android:id="@+id/button6atencio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ate" />

    <Button
        android:id="@+id/button8next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s" />

</LinearLayout>